# polygon-iter

./: README.md  pyproject.toml
docs/: automatic_iteration_count.md
src/itero/: __main__.py  cli.py  exceptions.py  main.py  plotting.py  primitives.py  transforms.py
src/polygon_iter/: __main__.py  cli.py  geometry.py  main.py  plotting.py  primitives.py  transforms.py
