[project]
name = "polygon-iter"
version = "0.1.0"
description = "Iterative polygon visualization"
authors = [{name = "David Danka"}]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
polygon-iter = "polygon_iter.cli:cli"