[project]
name = "itero"
version = "0.1.0"
description = "Visualization of iterative transformations"
authors = [{name = "David Danka"}]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
itero = "itero.cli:cli"