[project]
name = "itero"
version = "0.1.0"
description = "Visualization of iterative transformations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "David Danka"}]
dependencies = [
    "matplotlib==3.10.8"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
itero = "itero.cli:cli"